Added SoulVial. Obtained through piglin bartering. Can be used to store a soul for later. Smashing open a soul vial spawns the soul reward in front of the player.